# fishing_bot

./: CMakeLists.txt  README.md
src/: data_analyzer.cpp  data_analyzer.h  main.cpp  mouse_mover.cpp  mouse_mover.h  opencv_data_loader.cpp  opencv_data_loader.cpp~  opencv_data_loader.h  screenshot.cpp  screenshot.h  swimmer_finder.cpp  swimmer_finder.h
